# workingPython

./: README.md  pyproject.toml
src/: classes.py  ino.py  main.py  oloo.py
theory/: __init__.py  learn.py
theory/lol/: l.py  o.py
theory/mo/: __init__.py  m1.py
